<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/notifications">

        <SwitchPreference
            android:key="notifications_enabled"
            android:title="@string/enable_notifications"
            android:summary="@string/receive_weather_updates_and_alerts"
            android:defaultValue="true" />

        <Preference
            android:key="test_notification"
            android:title="Test Notification"
            android:summary="Send a test notification to check if they're working" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/appearance">

        <ListPreference
            android:key="app_theme"
            android:title="@string/theme"
            android:summary="@string/choose_app_theme"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="system" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Weather Settings">

        <ListPreference
            android:key="temperature_unit"
            android:title="@string/temperature_unit"
            android:summary="@string/choose_temperature_display_unit"
            android:entries="@array/temperature_units"
            android:entryValues="@array/temperature_unit_values"
            android:defaultValue="celsius" />

        <ListPreference
            android:key="update_frequency"
            android:title="@string/update_frequency"
            android:summary="@string/how_often_to_update_weather_data"
            android:entries="@array/update_frequencies"
            android:entryValues="@array/update_frequency_values"
            android:defaultValue="60" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about">

        <Preference
            android:title="@string/app_version"
            android:summary="1.0.0" />

        <Preference
            android:title="@string/privacy_policy" />

        <Preference
            android:title="@string/terms_of_service" />

    </PreferenceCategory>

</PreferenceScreen>